added neukom grant link

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1281,7 +1281,7 @@ lab.  \coordinator~can help facilitate these payments.
  well in advance of the start of the term you wish to run
  participants.
 
-\marginnote{\texttt{NOTE:}In some cases, external funding sources may be available to cover cash subject payments (e.g. \href{https://students.dartmouth.edu/ugar/research/programs/honors-thesis-grant}{undergraduate Honors Thesis Grants}). Coordinate with \director~or \coordinator~to determine whether alternative funding sources are available for your project.}
+\marginnote{\texttt{NOTE:}In some cases, external funding sources may be available to cover cash subject payments (e.g. \href{https://students.dartmouth.edu/ugar/research/programs/honors-thesis-grant}{undergraduate Honors Thesis Grants} or \href{http://neukom.dartmouth.edu/programs/neukom-scholars.html}{Neukom Scholars grants}). Coordinate with \director~or \coordinator~to determine whether alternative funding sources are available for your project.}
  Cash subject payments for lab research projects will in most cases be fully covered by
  the lab (see the \texttt{NOTE}).  Subject payment guidelines are generally found in the IRB
  approval documentation relevant to your project.  For Mechanical Turk
