finished first read through

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1291,7 +1291,7 @@ lab.  \coordinator~can help facilitate these payments.
 
 
 \chapter{Internal Review Board (IRB) approvals}
-Experimental \marginnote{\texttt{TASK:} prior to running any out-of-lab
+Experimental \marginnote{\texttt{TASK:} prior to running any non-lab-member
   participants in your study, you must coordinate with \coordinator~to
   verify that (a) your experiment has
   been approved by the IRB and (b) your name is
@@ -1366,11 +1366,11 @@ need access to RAPPORT then let \director~know.
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
     applicable), and PBS department events.
-  \item I have created a GitHub account and have been added to the lab
-    GitHub group.  If I am unfamiliar with Git, I have gone through
+  \item I have created a GitHub account and have been added to the appropriate lab
+    GitHub group(s).  If I am unfamiliar with Git, I have gone through
     the GitHub tutorials.
-  \item I have created a Trello account and have been added to the lab
-    Trello group.
+  \item I have created a Trello account and have been added to the appropriate lab
+    Trello group(s).
        \item I have joined the lab's Slack account and agree to check it
   regularly (at least once per normal business day, excluding days I
   mark on the out-of-lab calendar).
@@ -1378,7 +1378,7 @@ need access to RAPPORT then let \director~know.
     senior lab member, or I have not been added because I am a junior
     lab member.
     \item I have submitted a photograph (of myself, or a
-    representative scene or object) along with a brief (2-3 sentence)
+    representative scene or object) along with a brief (2-3 sentence),
     professionally worded biography, to be included on the lab
     website.  Alternatively, I have coordinated with \coordinator~to indicate my
     preference to not be included on the lab website.
@@ -1393,6 +1393,8 @@ need access to RAPPORT then let \director~know.
   \item I have carefully read through the entire lab manual, and I have
     checked off all of the above items to indicate that I have carried
     out the indicated tasks.
+  \item I have talked to \director~or \coordinator~about any supplemental modules,
+  and plan to complete those assigned.
   \item I will send a digital copy (PDF) of the final two pages of
     this manual, including checked-off list items, my digital
     signature, and today's date, to \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
