added reference to git resources

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -831,7 +831,7 @@ accomplish various necessary administrative tasks:
   \marginnote{\texttt{TASK:} If you've never used GitHub (Git)
     before, please work through these
     \href{https://try.github.io/}{GitHub
-      Tutorials}.}  This is used to manage all code, papers, grants,
+      Tutorials}. You may also find it useful to refer to this \href{https://github.com/ContextLab/lab-manual/tree/master/resources/git-cheatsheet.pdf}{Git cheatsheet} and this \href{https://github.com/ContextLab/lab-manual/tree/master/resources/workflow-of-version-control.pdf}{Git workflow} sheet when using Git/GitHub at first.}  This is used to manage all code, papers, grants,
   presentations, and posters.  In other words, anything where it'd be
   useful to track multiple versions, anything that we might ultimately
   want to release to the public, and/or anything that multiple lab
