small wording catch

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1108,7 +1108,7 @@ your compensation, please discuss them with \director.
 
 \subsection{Interpersonal issues}
 If you are experiencing an interpersonal issue with another lab member
-or community and are having trouble resolving it on your own (or feel
+or community member and are having trouble resolving it on your own (or feel
 unsafe resolving it on your own), please seek out assistance from
 \director, \coordinator, your Project Owner, your Project Coordinator,
 or one of the Dartmouth community resources described below as early
