added reference to interpersonal issues section in faq

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1130,7 +1130,8 @@ prospective employees. The
 provides a similar suite of services to student employees.  The
 \href{http://www.dartmouth.edu/~ombuds/}{Dartmouth Ombuds Office} also
 provides confidential and informal assistance in resolving concerns
-related to interpersonal issues.
+related to interpersonal issues.  Please also see the 
+\href{https://github.com/ContextLab/lab-manual/tree/master/resources/FAQ.pdf}{\textit{Ask a question, answer a question}} document section on resources for resolving interpersonal issues.
 
 
  \newthought{Lab resources}
