made google calendar links in scheduling section read only; all other mentions of calendars link to scheduling section; updated request invite task to specify

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -471,7 +471,7 @@ While there is value to the \textit{italicized} items, we value
 \item The most effective and efficient method of conveying information
   within a research team is face-to-face conversation.  We use
   the
-  \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{CDL
+  \hyperref[sec: scheduling]{CDL
     Google calendar} to coordinate formal meetings between lab
   members.  You can also sign up for meetings with \director~via
   \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.  We also
@@ -747,19 +747,22 @@ meetings:
 \item \textbf{Lab meeting.}  We will have, as a lab, a regular weekly
   1.5 hour meeting on \textbf{\labmeetingtime}.  The precise
   format of this meeting varies from week to week according to lab
-  needs and interests. Attendees: all active lab members. % Subscribe to calendar \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+  needs and interests. Attendees: all active lab members.
+  
 \item \textbf{Project meetings.}  Several of our collaborative
   projects involve regular coordination with external lab members.
   These are organized on an \textit{ad hoc} basis for each project.
   Attendees: all project team members, and any other interested active
-  lab members.  % Subscribe to calendar \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+  lab members. 
+  
   \item \textbf{Hackathons.}  We occasionally organize hackathon
     style events whereby spontaneously organized groups work towards
     one or more very short term projects or goals.  These are
     scheduled on an \textit{ad hoc} basis.  Attendees: all interested
     lab members, any interested member of the Dartmouth community,
-    external collaborators.  % Subscribe to calendar \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
-  \marginnote{\texttt{NOTE:} Each term, you'll sign up for a beginning-of-term and
+    external collaborators.  
+
+\marginnote{\texttt{NOTE:} Each term, you'll sign up for a beginning-of-term and
     end-of-term meeting time with \director via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
   \item \textbf{Beginning-of-term and end-of-term meetings.} At the
     start or end of each term, you should schedule a 30 minute
@@ -767,13 +770,13 @@ meetings:
     plans, progress, goals, etc.  It is your responsibility to sign up
     for a slot via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.
     
-  \marginnote{\texttt{NOTE:} Department talks and colloquia are listed on the \href{https://calendar.google.com/calendar/b/1?cid=bXAxYnVqYjM5dWQ1YmdtbW5xOXI4ZGJpdWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{PBS Department Events} calendar.}
+  \marginnote{\texttt{NOTE:} Department talks and colloquia are listed on the \hyperref[sec: scheduling]{PBS Department Events} calendar.}
   \item \textbf{Department talks and colloquia.} Each week the
     Department of Psychological and Brain Sciences invites internal
     and external researchers to present on a wide variety of research
     topics.  You are encouraged to attend any that seem interesting.
     Attendees: all interested lab and non-lab Dartmouth community
-    members.  % Subscribe to calendar \href{https://calendar.google.com/calendar?cid=bXAxYnVqYjM5dWQ1YmdtbW5xOXI4ZGJpdWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+    members.
     \marginnote{\texttt{TASK:} If you are a paid lab employee, or if
       you would like to submit weekly snippets, email \director to get
       added to the Howdy script.}
@@ -936,8 +939,9 @@ coordinate this with \director, \coordinator, and your team members.
 
 
 \newthought{Scheduling}
+\label{sec: scheduling}
 
-\noindent \marginnote{\texttt{TASK:} email \coordinator~to request invites to each of the calendars below.}
+\noindent \marginnote{\texttt{TASK:} email \coordinator~to request invites to each of the calendars below---the download links in the lab manual are read-only!}
 Our lab's scheduling practices and policies are intended to facilitate
 lab member interactions between ourselves, our collaborators, and our
 experimental participants.  There are three basic tools the lab uses
@@ -959,12 +963,12 @@ to organize and schedule events:
  \marginnote{\texttt{TASK:} If you are a graduate or undergraduate student, please add your
   schedule to the CDL class schedule calendar at the beginning of each term.}
 \item We use the
-  \href{https://calendar.google.com/calendar?cid=djJzZWxvbWc0bzZhb2J1YTdnOTIyYWFtcWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{CDL
+  \href{https://calendar.google.com/calendar/ical/v2selomg4o6aobua7g922aamqc\%40group.calendar.google.com/private-4377dd542d0d1f6226c9657955b778c5/basic.ics}{CDL
   class schedule calendar} to keep track of course
 schedules of grad students and undergraduates.
   \item We use the \href{https://calendar.google.com/calendar/ical/j6noo2tqahpsoq9na1h16paf3s\%40group.calendar.google.com/private-c3d75bea1ab4605947353d159d3dcd05/basic.ics}{DHMC meetings
   calendar} to keep track of important events and meetings at DHMC.
-  \item We use the \href{http://calendar.google.com/PLACEHOLDER-LINK}{PBS department events calendar} to keep track of talks and events happening in the department.
+  \item We use the \href{https://calendar.google.com/calendar/ical/mp1bujb39ud5bgmmnq9r8dbiuk\%40group.calendar.google.com/private-8a3c6919c30e7b118ab3a4fd23aad6cf/basic.ics}{PBS department events calendar} to keep track of talks and events happening in the department.
   \item You may also choose to create project-specific
   Google Calendars, inviting project team members.  When you add an
   event (in any lab calendar), it is important to include
@@ -1038,7 +1042,7 @@ official lab attendance policy:
   affect (e.g. \director, \coordinator, people you're scheduled to
   meet with, etc.).  The best way to do this is via email or Slack, along with adding your
   absence to the 
-  \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab
+  \hyperref[sec: scheduling]{out-of-lab
     calendar}.
 \begin{itemize}
 \item You are responsible for accounting for your planned absences
