--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -489,7 +489,7 @@ While there is value to the \textit{italicized} items, we value
   ``step back'' and think about the big picture (effectively getting
   stuff done between your work sessions!).  Sustainable work habits
   also promote good communication and coordination between project
-  ream members.
+  team members.
 
 \item At regular intervals, the team reflects on how to become more
   effective, then tunes and adjusts its behavior accordingly.  At
