added comment about being credited in lab conversations

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -87,7 +87,6 @@
 %----------------------------------------------------------------------------------------
 
 \begin{document}
-
 \frontmatter
 
 %----------------------------------------------------------------------------------------
@@ -258,7 +257,7 @@ certain rights, and you agree to take on certain responsibilities.
     constructive feedback with all lab members.
   \item You are entitled to appropriate credit (authorship,
     acknowledgement, letter of recommendation) for your work and
-    ideas.
+    ideas.This includes being credited in conversation (for example, "As Karen said, I agree we should..." Rather than, "Again, I think we should...")
 \end{enumerate}
 
 \newthought{Your responsibilities as a lab member}
@@ -267,9 +266,9 @@ certain rights, and you agree to take on certain responsibilities.
     from behaviors that harass, abuse, expose to violence, or
     discriminate.
   \item You agree to support and respect all lab members, including
-    yourself.
+    yourself. 
   \item You agree to share your scientific ideas and constructive
-    feedback with other lab members.
+    feedback with other lab members. 
   \item You agree to clearly communicate and document your
     contributions to each research project (e.g.\ through GitHub
     commits, reports, updates on Slack, etc.).
@@ -471,7 +470,7 @@ While there is value to the \textit{italicized} items, we value
   members.  You can also sign up for meetings with \director~via
   \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.  We also
   use Slack to coordinate, share notes/data, etc., but the ideal form
-  of communication in the lab is face-to-face (and it often involves a whiteboard).
+  of communication in the lab is face-to-face (and it often involves a whiteboard). 
 
 \item Agile research is sustainable research.  Researchers should be
   able to maintain a constant pace indefinitely.  To be sure, we
@@ -1494,5 +1493,6 @@ Signature & Date\\
 %----------------------------------------------------------------------------------------
 
 \printindex % Print the index at the very end of the document
+
 
 \end{document}
