minor formatting changes

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -755,10 +755,10 @@ meetings:
   to calendar
   \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
   \marginnote{\texttt{TASK:} Each term, sign up for a beginning-of-term or
-    end-of-term meeting time with \director via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
+    end-of-term meeting time with \director~via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
   \item \textbf{Beginning-of-term and end-of-term meetings.} At the
     start or end of each term, you should schedule a 30 minute
-    meeting slot with \director to discuss your research
+    meeting slot with \director~to discuss your research
     plans, progress, goals, etc.  It is your responsibility to sign up
     for a slot via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.
   \item \textbf{Department talks and colloquia.} Each week the
