removed faq document and links to it from main manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -245,7 +245,7 @@ particular task (or understanding a particular concept) that isn't
 covered by the existing set of tutorials, please consider contributing
 a tutorial of your own once you've figured things out!
 
-If you encounter an error or problem you don't know how to fix, try checking the \href{https://github.com/ContextLab/lab-manual/tree/master/resources/FAQ.pdf}{ask a question, answer a question} document, where we maintain a log of common problems lab members run into and solutions. If your don't see a solution to your question there, consider adding the question so that you or someone else can later add the answer for future readers!
+If you encounter an error or problem you don't know how to fix, try checking the \hyperref[ch:faq]{ask a question, answer a question} section, where we maintain a log of common problems lab members run into and solutions. If your don't see a solution to your question there, consider adding the question so that you or someone else can later add the answer for future readers!
 
 
 \chapter{Bill of rights and responsibilities}\label{ch:billofrights}
@@ -1297,7 +1297,7 @@ lab.  \coordinator~can help facilitate these payments.
  which is managed by \coordinator.
 
 
-\chapter{Ask a question, answer a question}\label{ch: faq}
+\chapter{Ask a question, answer a question}\label{ch:faq}
 This section contains a log of common issues and errors encountered by lab members, as well as some guidelines on where to seek help with issues that may arise in the lab.  If you encounter an issue you don't know how to resolve right away, this is a good place to begin your efforts. 
 \\~\\
 \noindent If you run into a tricky technical issue you think is likely to come up again, consider adding it to the log, and then adding the solution when you resolve it.  Additionally, if you find yourself helping another lab member with a problem you encountered in the past, document the problem and its solution here for future lab members.
