addressed more PR comments

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -407,7 +407,7 @@ While there is value to the \textit{italicized} items, we value
 
 \item We deliver research products frequently, from a couple of weeks to
   a couple of months, with a preference for shorter timescales.
-  Before you have some display of your work (a figure, a
+  Before you have a concrete manifestation of your work (a figure, a
   statistic, a presentation, a paper draft, a dataset, a GitHub
   commit, etc.) you have nothing you can show the world for your
   efforts.  Produce research products, even if they're small and
@@ -663,39 +663,39 @@ these roles on your project:
 \end{enumerate}
 
 \item \textbf{Team Member.}  Team members are responsible for carrying
-  out the project work.  Team members are:
+  out the project work.  Team members:
 \begin{enumerate}
-\item Cross-functional: includes members with development skills
+\item Are cross-functional: includes members with development skills
   (write code or papers/grants), testing skills (e.g.\ data
   collection, test software, proofread papers/grants), and/or domain
   expertise (e.g.\ knowledge or interest in a relevant research area)
-\item Self-organizing and self-managing without externally assigned
+\item Are self-organizing and self-managing without externally assigned
   roles
-\item Negotiating commitments with the Project Owner, one ``sprint'' at
+\item Negotiate commitments with the Project Owner, one ``sprint'' at
   a time
-\item Autonomous regarding how to reach commitments
-\item Intensely collaborative
-\item (Ideally) located in one team room (usually this will be the lab)
-\item (Ideally) committed to long-term, full-time lab membership
-\item (Ideally) members of a single team/project % should this be here?
-\item Often acting in various leadership roles
+\item Have autonomy regarding how to reach commitments
+\item Are intensely collaborative
+\item Are (ideally) located in one team room (usually this will be the lab)
+\item Are (ideally) committed to long-term, full-time lab membership
+\item Are (ideally) focused on a single team/project at a time
+\item Often act in various leadership roles
 \end{enumerate}
 
 \item \textbf{Project Coordinator.} The Project Coordinator facilitates
-  the agile research process by:
+  the agile research process both directly and indirectly. The Project Coordinator:
 \begin{enumerate} 
-\item Helping to resolve impediments
-\item Creating an environment conducive to team self-organization
-\item Capturing empirical data to adjust forecasts (e.g.\ weekly Slack
+\item Help to resolve impediments
+\item Create an environment conducive to team self-organization
+\item Capture empirical data to adjust forecasts (e.g.\ weekly Slack
   reports summarizing progress)
-\item Shielding the team from external interference and distraction to
+\item Shield the team from external interference and distraction to
   keep it ``in the zone''
-\item Enforcing timelines
-\item Having no management authority over the team (anyone with authority
+\item Enforce timelines
+\item Have no management authority over the team (anyone with authority
   over the team is by definition not its Project
   Coordinator)
-\item Occasionally acting in a leadership role
-\item Usually the Lab Coordinator (\href{mailto:contextualdynamics@gmail.com}{\coordinator}) will also be the Project Coordinator
+\item Occasionally act in a leadership role
+\item Will usually be the Lab Coordinator (\href{mailto:contextualdynamics@gmail.com}{\coordinator})
 \end{enumerate}
 
 \item \textbf{Collaborator.}  Collaborators are not formally part of
@@ -704,19 +704,20 @@ these roles on your project:
   the project.  They may carry out one or more of the
   following roles:
 \begin{enumerate}
-\item Providing data or share equipment
-\item Providing occasional consulting services
-\item Providing occasional feedback on project results
-\item Carrying out minor analyses
-\item Proofreading documents
-\item Helping with administrative tasks such as scheduling
-\item Helping with information technology tasks such as computer
-  maintenance
-\item A project may never be held up by a collaborator.  If the
+\item Provide data or share equipment
+\marginnote{\texttt{NOTE:} A project may never be held up by a collaborator.  If the
   collaborator fails to provide a promised service, the project team
   must adapt.  If the collaborator fails to meet a non-critical
   deadline, the project will proceed without that component of the
-  project.  Involvement as a collaborator is fluid.
+  project.  Involvement as a collaborator is fluid.}
+\item Provide occasional consulting services
+\item Provide occasional feedback on project results
+\item Carry out minor analyses
+\item Proofread documents
+\item Help with administrative tasks such as scheduling
+\item Help with information technology tasks such as computer
+  maintenance
+
 \end{enumerate}
 By definition, collaborators play a minor role in the project, and they are not
 responsible for managing any aspect of the project.  They may become Team
@@ -734,10 +735,10 @@ are not normally co-authors.
     one thing that you can present at a lab meeting.  Junior lab
     members (undergraduates) are not obligated to present at lab
     meetings, but may schedule a time to do so upon request by
-    coordinating with \director.  \textbf{Exception}: if you are presenting
+    coordinating with \director.  \textbf{Exception: if you are presenting
     your work outside of the lab, and if it is the first time you are
     presenting that project, you \textit{must} do a practice talk for
-    the lab (regardless of whether you are a junior or senior lab member).}
+    the lab (regardless of whether you are a junior or senior lab member).}}
 \noindent  Effective lab communication requires forums for communicating.  As
 described below, we use \href{http://www.slack.com}{Slack} to
 facilitate non-in-person communications, but Slack cannot replace
@@ -798,7 +799,7 @@ meetings:
       weekly snippet schedules means that you will receive a link via
       the ``Howdy'' survey bot (through Slack) each Monday at 9am.
       Your answers are then compiled into reports that I receive each
-      Tuesday at the end of the day (5pm).  % is this true? I always have until 10am Wednesday to fill out my Howdy
+      Wednesday at 10am.
       If you are an unpaid
       employee but are likely to request a letter of recommendation,
       weekly snippets are a good way for me to maintain a detailed
@@ -894,20 +895,20 @@ asking \director).
 
 The general steps to starting a project are:
 \begin{enumerate}
+
   \item Create a Slack channel or decide on existing channel
-    appropriate for project use.
-  \item Create a GitHub repository for your project and link it to the
-    project's Slack channel (through a
-    \href{https://get.slack.help/hc/en-us/articles/232289568-GitHub-for-Slack}{GitHub
-      for Slack} integration). % I think only admins on slack (only Jeremy) can do this
+    appropriate for project use. 
+\marginnote{\texttt{NOTE:} If you create a new Slack channel for your project, invite \director, \coordinator, and other team members to join.}
+  \item Coordinate with \director~to set up a \href{https://get.slack.help/hc/en-us/articles/232289568-GitHub-for-Slack}{GitHub
+      for Slack} integration between your project and channel by sending a link to the GitHub repo in the project's Slack channel with a note asking to set up a Slack integration.
    \item If your project involves testing human participants, verify
      with \director~that your project is covered under an existing
      active IRB protocol, and that you are listed on the protocol. (A list of
 active IRB protocols appears at the end of this lab manual.)
 Depending on the protocol, you may need to complete one or more online
 training courses to become certified to run your experiment.  If no
-existing protocol is more appropriate for your study, discuss with
-\director~whether it would be appropriate to create a new protocol or
+existing protocol is appropriate for your study, discuss with
+\director~whether it would be more appropriate to create a new protocol or
 submit an amendment for an existing protocol.
     \item Create an initial set of short-term action items for kicking
       off your project and post them to your project's Slack channel.
@@ -1057,7 +1058,7 @@ official lab attendance policy:
   2 weeks in advance.
 \item Brief (one day) absences (excluding weekends, and lab-related
   absences) should be scheduled as far in advance as possible, but at
-  least at the beginning of the week, excepting, of course, for emergency situations.
+  least at the beginning of the week, emergencies notwithstanding.
 \end{itemize}
 
 \item If you are feeling sick, \textit{do not come into the lab}.  We can
@@ -1137,7 +1138,7 @@ provides a similar suite of services to student employees.  The
 \href{http://www.dartmouth.edu/~ombuds/}{Dartmouth Ombuds Office} also
 provides confidential and informal assistance in resolving concerns
 related to interpersonal issues.  Please also see the 
-\href{https://github.com/ContextLab/lab-manual/tree/master/resources/FAQ.pdf}{\textit{Ask a question, answer a question}} document section on resources for resolving interpersonal issues.
+\hyperref[sec:interpersonal]{\textit{Ask a question, answer a question} section on resources for resolving interpersonal issues}.
 
 
  \newthought{Lab resources}
@@ -1348,7 +1349,7 @@ This section contains a log of common issues and errors encountered by lab membe
 \item If you still cannot find an answer to your question, talk to \director.
 \end{itemize}
 
-\subsection{Interpersonal issues}
+\subsection{Interpersonal issues}\label{sec:interpersonal}
 \begin{itemize}
 \item Clear, direct communication is often the best way to address interpersonal issues. However, if you are having trouble resolving something (or feel uncomfortable doing so on your own) you should reach out to one of the following resources:
 
@@ -1496,7 +1497,7 @@ need access to RAPPORT then let \director~know.
   \item I have carefully read through the entire lab manual, and I have
     checked off all of the above items to indicate that I have carried
     out the indicated tasks.
-  \item I have talked to \director~or \coordinator~about any supplemental modules,
+ % \item I have talked to \director~or \coordinator~about any supplemental modules,
   and plan to complete those assigned.
   \item I will send a digital copy (PDF) of the final two pages of
     this manual, including checked-off list items, my digital
